archivist: fix issue where tests won't run if local server is running.

--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -12,7 +12,7 @@ archivist.datasource.primary.url=jdbc:h2:./unittest/archivist;DB_CLOSE_DELAY=-1;
 #
 server.port=7066
 archivist.events.port=7087
-
+archivist.cluster.command.port = 7065
 #
 # Set the shared data path to the plugin installation spot.
 #
