common: rolled back the v10 mapping with porter stem

--- a/common/src/main/resources/db/mappings/archivist/V9__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V9__mapping.json
@@ -17,8 +17,7 @@
           "filter": [
             "trim",
             "delimiter_filter",
-            "lowercase",
-            "porter_stem"
+            "lowercase"
           ]
         },
         "case_sensitive": {
