archivist: new keywords system.
Adds a system for auto-detecting keywords fields, makes the keyword ingestor obsolete.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -87,11 +87,11 @@ archivist.security.ldap.filter=(cn={0})
 
 ## Search Settings
 
-### Default search field and boost value.
-archivist.search.queryFields.keywords.all = 1.0
+### Automatically
+archivist.search.keywords.auto.enabled = true
 
-### Default search field and boost value.
-archivist.search.queryFields.keywords.all.raw = 2.0
+### If autoconfigure is true, dynamically add fields with this name to a query search.
+archivist.search.keywords.auto.fieldNames = keywords.all,keywords,filename,content,title,caption
 
 ### The default sort fields in the format of field:direction,field:direction.
 ### Score is always first.
@@ -99,7 +99,7 @@ archivist.search.sortFields = _timestamp:DESC
 
 ### The default sort fields in the format of field:direction,field:direction.
 ### Score is always first.
-archivist.search.queryAnalyzer = whitespace
+archivist.search.queryAnalyzer = simple
 
 ## Import Settings
 
