common: added hand compiled thrift.jar that removes some lame debugging log.

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -25,6 +25,8 @@
             <groupId>org.apache.thrift</groupId>
             <artifactId>libthrift</artifactId>
             <version>0.10.0</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/libthrift-0.10.0.jar</systemPath>
         </dependency>
 
         <dependency>
