Disable tomcat logging unless its specifically enabled.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -237,7 +237,7 @@ server.tomcat.basedir=${archivist.path.home}/logs
 server.tomcat.accesslog.directory=http
 
 ### Determines if HTTP access logs are enabled.
-server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.enabled=false
 
 ### The pattern to use for the access logs.
 server.tomcat.accesslog.pattern=common
