common: removed _byte support from hamming, added support our special hashes.
The header for each hash is:
1 char: version
2 chars: position of data
2 chars: resolution

--- a/common/src/main/resources/db/mappings/archivist/V9.4__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V9.4__mapping.json
@@ -9,6 +9,16 @@
           "type": "string"
         }
       }
+    },
+    {
+      "similarity": {
+        "match_mapping_type": "string",
+        "path_match": "similarity.*",
+        "mapping": {
+          "index": "not_analyzed",
+          "type": "string"
+        }
+      }
     }
   ]
 }
