--- a/common/src/main/resources/db/mappings/archivist/V9__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V9__mapping.json
@@ -237,6 +237,16 @@
           }
         },
         {
+          "similarity": {
+            "match_mapping_type": "string",
+            "path_match": "similarity.*",
+            "mapping": {
+              "index": "not_analyzed",
+              "type": "string"
+            }
+          }
+        },
+        {
           "color_template": {
             "path_match": "*.colors",
             "mapping": {
