common: v9.4 mapping fixes

--- a/common/src/main/resources/db/mappings/archivist/V9.4__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V9.4__mapping.json
@@ -3,7 +3,8 @@
     {
       "hash_template": {
         "match_mapping_type": "string",
-        "match": "hash",
+        "match_pattern": "regex",
+        "match": "hash|byte",
         "mapping": {
           "index": "not_analyzed",
           "type": "string"
