common: fixed v5 mapping regex

--- a/common/src/main/resources/db/mappings/archivist/V9__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V9__mapping.json
@@ -212,7 +212,7 @@
           "hash_template": {
             "match_mapping_type": "string",
             "match_pattern": "regex",
-            "match": "hash|byte",
+            "match": "^hash$|^byte$",
             "mapping": {
               "index": "not_analyzed",
               "type": "string"
