archivist: allow a default similarity field name.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -87,6 +87,9 @@ archivist.security.ldap.filter=(cn={0})
 
 ## Search Settings
 
+### The default similarity field name.
+archivist.search.similarity.fieldName = similarity.tensorflow.byte
+
 ### Automatically
 archivist.search.keywords.auto.enabled = true
 
