Archivist: improved settings service.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -87,11 +87,14 @@ archivist.security.ldap.filter=(cn={0})
 
 ## Search Settings
 
-### Automatically
+### Automatically detect and utilize fields in keyword searches.
 archivist.search.keywords.auto.enabled = true
 
-### If autoconfigure is true, dynamically add fields with this name to a query search.
-archivist.search.keywords.auto.fieldNames = keywords.all,keywords,filename,content,title,caption
+### If keywords.auto.enabled is true, dynamically add fields with this name to a query search.
+archivist.search.keywords.auto.fields = keywords.all,keywords,filename,content,title,caption
+
+### A JSON Map<String,Float> of hard coded keywords fields, eg {"foo": 1.0}
+archivist.search.keywords.static.fields =
 
 ### The default sort fields in the format of field:direction,field:direction.
 ### Score is always first.
