archivist: implemented shared links.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -161,6 +161,9 @@ archivist.maintenance.backups.enabled = false
 ### Remove backup data after the given period of time.
 archivist.maintenance.backups.expireDays = 7
 
+### Expire shared links after N Days
+archivist.maintenance.sharedLinks.expireDays = 14
+
 # Cluster Settings
 # Shared cluster settings are propagated to the Analysts.
 
