archivist: added option for open db console.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -66,6 +66,9 @@ archivist.datasource.primary.username=sa
 ### The password for the Archvist SQL database.
 archivist.datasource.primary.password=
 
+### Allow non-localhost clients to connect to DB console if available.
+archivist.datasource.primary.console.open = false
+
 ## HMAC Security configuration.
 
 ### Determines if HMAC security can be used. Defaults to false.
