analyst: allow analysts to be elastic masters.

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -12,6 +12,7 @@ analyst.key.file=analyst.key
 analyst.master.host = archivist:8065
 
 analyst.index.data=false
+analyst.index.master=false
 analyst.index.host=archivist:9401
 analyst.path.home=.
 analyst.path.index=${analyst.path.home}/db/index
