archivist: implemented method for applying permissions through processors as well as default settings for permissions.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -88,6 +88,17 @@ archivist.security.ldap.base=ou=people,o=sevenSeas
 ### A pattern for matching the username.
 archivist.security.ldap.filter=(cn={0})
 
+## Permissions Configuration
+
+### The default permissions assigned to new assets.
+archivist.security.permissions.defaultRead = group::everyone
+
+### The default permissions assigned to new assets.
+archivist.security.permissions.defaultWrite = group::manager
+
+### The default permissions assigned to new assets.
+archivist.security.permissions.defaultExport = group::everyone
+
 ## Search Settings
 
 ### Automatically detect and utilize fields in keyword searches.
@@ -274,6 +285,11 @@ spring.http.multipart.max-file-size=250Mb
 
 ## The maxiumum size of a multipart request.
 spring.http.multipart.max-request-size=500Mb
+
+## Connection Pool.
+
+### Number of connections
+spring.datasource.tomcat.maxActive=5
 
 ## Heath and Management
 
