archivist: added plugin system for ldap user details.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -88,6 +88,9 @@ archivist.security.ldap.base=ou=people,o=sevenSeas
 ### A pattern for matching the username.
 archivist.security.ldap.filter=(cn={0})
 
+### Check and import authorities from an external source.
+archivist.security.ldap.userDetailsPlugin =
+
 ## Permissions Configuration
 
 ### The default permissions assigned to new assets.
