--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     </properties>
 
     <modules>
+        <module>zorroa-security</module>
         <module>common</module>
         <module>archivist</module>
         <module>analyst</module>
