servers: changed layout of jar file to allow loading of additional jars from lib/ext

--- a/analyst/pom.xml
+++ b/analyst/pom.xml
@@ -157,6 +157,7 @@
                 <configuration>
                     <mainClass>${start-class}</mainClass>
                     <finalName>analyst</finalName>
+                    <layout>ZIP</layout>
                 </configuration>
                 <executions>
                     <execution>
