common: updated test.properties for new tests

--- a/common/src/test/resources/test.properties
+++ b/common/src/test/resources/test.properties
@@ -3,3 +3,5 @@ test.prop.int=123
 test.prop.double=3.14159
 test.prop.bool=true
 test.list=file:src/test/resources/stuff.txt
+test.emptyList=
+test.arrayList=a, b, c
