archivist: added trust mode to hmac authentication

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -74,6 +74,9 @@ archivist.datasource.primary.console.open = false
 ### Determines if HMAC security can be used. Defaults to false.
 archivist.security.hmac.enabled=true
 
+### Trust just the username.
+archivist.security.hmac.trust=false
+
 ## LDAP Security configuration.
 
 ### Determines if the Archivist LDAP plugin is enabled.
