archivist: setup simpler import path whitelist.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -124,7 +124,7 @@ archivist.search.sortFields = _timestamp:DESC
 
 ### The default suggest path filter for zorroa server side imports.
 ### This setting should be overwritten by a production configuration.
-archivist.import.suggest.paths.zorroa=/
+archivist.import.suggest.paths=/
 
 ### The default priority for an import task. Lower is better.
 archivist.import.priority = 100
