archivist: implmented a suggest v3 endpoint which can take into account multiple suggestion fields.

--- a/common/src/main/resources/db/mappings/archivist/V10__mapping.json
+++ b/common/src/main/resources/db/mappings/archivist/V10__mapping.json
@@ -199,6 +199,15 @@
           }
         },
         {
+          "suggest_template": {
+            "match_mapping_type": "string",
+            "match": "suggest",
+            "mapping": {
+              "type": "completion"
+            }
+          }
+        },
+        {
           "content_template": {
             "match_mapping_type": "string",
             "match": "content",
