archivist: refactored the imports/_suggest endpoint into a new system for querying the local file system.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -120,11 +120,16 @@ archivist.search.keywords.static.fields =
 ### Score is always first.
 archivist.search.sortFields = _timestamp:DESC
 
-## Import Settings
+## Local file system settings.
 
-### The default suggest path filter for zorroa server side imports.
+### The root paths allowed by the local file system service.
 ### This setting should be overwritten by a production configuration.
-archivist.import.suggest.paths=/
+archivist.lfs.paths=/
+
+### The permission groups that are allowed to use the local file system service.
+archivist.lfs.permissions=group::developer,group::administrator
+
+## Import Settings
 
 ### The default priority for an import task. Lower is better.
 archivist.import.priority = 100
