--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -18,9 +18,8 @@ archivist.cluster.command.port = 7065
 #
 archivist.path.shared=../unittest/shared
 
-### Paths the archivist is allowed to look at for importing.
-archivist.import.suggest.paths.test01=../../zorroa-test-data
-archivist.import.suggest.paths.zorroa=/zorroa
+archivist.lfs.paths=${archivist.path.home}/../../../zorroa-test-data
+
 
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
