archivist: changed number of replicas to 1 along with disabling the index refresh during reindex.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -52,6 +52,12 @@ archivist.index.data=true
 ### Determines if the Archivist should serve an ElasticSearch master.
 archivist.index.master=true
 
+### Allow index migration with at least the given status.
+archivist.index.migrateStatus = green
+
+### The number of elastic shard replicas.
+archivist.index.replicas = 0
+
 ## Internal DB configuration.
 
 ### The SQL DB vendor.
