archivist: reorder updating the index version and waiting on status so it's easier to recover from a ctr-c

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -53,10 +53,10 @@ archivist.index.data=true
 archivist.index.master=true
 
 ### Allow index migration with at least the given status.
-archivist.index.migrateStatus = green
+archivist.index.migrateStatus = yellow
 
 ### The number of elastic shard replicas.
-archivist.index.replicas = 0
+archivist.index.replicas = 1
 
 ## Internal DB configuration.
 
