archivist: added flag to disable migrations.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -52,6 +52,9 @@ archivist.index.data=true
 ### Determines if the Archivist should serve an ElasticSearch master.
 archivist.index.master=true
 
+### Enable index migration.
+archivist.index.migrateEnabled = true
+
 ### Allow index migration with at least the given status.
 archivist.index.migrateStatus = yellow
 
