--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -75,7 +75,7 @@ archivist.datasource.primary.driver-class-name=org.h2.Driver
 ### The username for the Archivist SQL database.
 archivist.datasource.primary.username=sa
 
-### The password for the Archvist SQL database.
+### The password for the Archivist SQL database.
 archivist.datasource.primary.password=
 
 ### Allow non-localhost clients to connect to DB console if available.
