archivist: expose a drag template setting.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -132,6 +132,9 @@ archivist.search.keywords.static.fields =
 ### Score is always first.
 archivist.search.sortFields = _timestamp:DESC
 
+### The default drag template.
+archivist.search.dragTemplate = %{source.path}
+
 ## Local file system settings.
 
 ### The root paths allowed by the local file system service.
