archivist: more liberal permissions on listing paths.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -142,7 +142,7 @@ archivist.search.dragTemplate = %{source.path}
 archivist.lfs.paths=/
 
 ### The permission groups that are allowed to use the local file system service.
-archivist.lfs.permissions=group::developer,group::administrator
+archivist.lfs.permissions=group::everyone
 
 ## Import Settings
 
