archivist: added a web based elastic monitor tool.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -61,6 +61,10 @@ archivist.index.migrateStatus = yellow
 ### The number of elastic shard replicas.
 archivist.index.replicas = 1
 
+### Allow access to the ES console. Setting this to true would be
+### required to use external tools to talk to elastic.
+archivist.index.console.open = false
+
 ## Internal DB configuration.
 
 ### The SQL DB vendor.
