analyst: make poll time configurable.

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -3,6 +3,7 @@
 # 0 for all CPUs, both physical and logical
 # -1 for 1/2 the number of available CPUS
 analyst.executor.threads = 0
+analyst.executor.pollTimeMs = 1000
 
 # Set to true if the analyst should execute tasks.  Setting this
 # to false and 'analyst.index.true' will make this a pure data node.
@@ -16,6 +17,7 @@ analyst.index.master=false
 analyst.index.host=archivist:9401
 analyst.path.home=.
 analyst.path.index=${analyst.path.home}/db/index
+
 
 analyst.cluster.command.port = 8098
 
