--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
                 <version>${zorroa-server.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.6</version>
+            </dependency>
+
             <!-- ALSO CHANGE IN zorroa-plugin-sdk root POM-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
