archivis: changed name of dragTemplate configuration key.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -136,9 +136,6 @@ archivist.search.keywords.static.fields =
 ### Score is always first.
 archivist.search.sortFields = _timestamp:DESC
 
-### The default drag template.
-archivist.search.dragTemplate = %{source.path}
-
 ## Local file system settings.
 
 ### The root paths allowed by the local file system service.
@@ -160,6 +157,9 @@ archivist.export.maxAssetCount=1024
 
 ### The default priority for an export task.  Lower is better.
 archivist.export.priority = 10
+
+### The default drag template for exported metadata.
+archivist.export.dragTemplate = %{source.path}
 
 ## Watermark Settings
 
