analyst: Added confiuration options to set backup paths.

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -15,9 +15,12 @@ analyst.master.host = archivist:8065
 analyst.index.data=false
 analyst.index.master=false
 analyst.index.host=archivist:9401
+
 analyst.path.home=.
 analyst.path.index=${analyst.path.home}/db/index
+analyst.path.backups=/backups
 
+analyst.maintenance.backups.enabled = false
 
 analyst.cluster.command.port = 8098
 
