server: added auto-shutdown feature to analyst.

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -20,6 +20,8 @@ analyst.path.home=.
 analyst.path.index=${analyst.path.home}/db/index
 analyst.path.backups=/backups
 
+analyst.autoshutdown.idle-minutes=-1
+
 analyst.maintenance.backups.enabled = false
 
 analyst.cluster.command.port = 8098
