archivist: provide a setting for curator to use in order to request video.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -161,6 +161,9 @@ archivist.export.priority = 10
 ### The default drag template for exported metadata.
 archivist.export.dragTemplate = %{source.path}
 
+### The order in which to request HMTL5 video formats when streaming video
+archivist.export.videoStreamExtensionFallbackOrder=mp4,m4v,webm,ogv,ogg
+
 ## Watermark Settings
 
 ### Enable watermarking of proxy images.
