tools: check for archivist to add dynamic memory detection

--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -5,7 +5,25 @@ archivist.path.home=unittest
 # Override the location of the unittest DB so it doesn't pick up data
 # we add from running the server locally.
 #
-archivist.datasource.primary.url=jdbc:h2:./unittest/archivist;DB_CLOSE_DELAY=-1;
+
+### The SQL DB vendor.
+archivist.datasource.primary.vendor=postgresql
+
+### The JDBC URL to the Archivist SQL database.
+archivist.datasource.primary.url=jdbc:postgresql://localhost/chambers?currentSchema=zorroa
+
+### The driver for the Archivist SQL database.
+archivist.datasource.primary.driver-class-name=org.postgresql.Driver
+
+### The username for the Archivist SQL database.
+archivist.datasource.primary.username=chambers
+
+### The password for the Archivist SQL database.
+archivist.datasource.primary.password=
+
+flyway.schemas=zorroa
+
+#archivist.datasource.primary.url=jdbc:h2:./unittest/archivist;DB_CLOSE_DELAY=-1;
 
 #
 # Run the the web server and event server on different port.
