archivist: added endpoint for changing passwords with configuration for password length and strength.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -85,6 +85,14 @@ archivist.datasource.primary.password=
 ### Allow non-localhost clients to connect to DB console if available.
 archivist.datasource.primary.console.open = false
 
+## Password Security Configuration
+
+### Require upper case and numeric characters.
+archivist.security.password.requireStrong = true
+
+### The number of characters a password must be.
+archivist.security.password.minLength = 8
+
 ## HMAC Security configuration.
 
 ### Determines if HMAC security can be used. Defaults to false.
