Archivist/Analyst: added comments to analyst config options and cleaned up some config issues.

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -1,33 +1,64 @@
 
-# Number of threads to use for asset executors.
-# 0 for all CPUs, both physical and logical
-# -1 for 1/2 the number of available CPUS
-analyst.executor.threads = 0
-analyst.executor.pollTimeMs = 1000
+# Analyst Settings
 
-# Set to true if the analyst should execute tasks.  Setting this
-# to false and 'analyst.index.true' will make this a pure data node.
-analyst.executor.enabled = true
-analyst.key.file=analyst.key
+## General Settings
 
+### The hostname:port of the archivist master host.
 analyst.master.host = archivist:8065
 
-analyst.index.data=false
-analyst.index.master=false
+### The hostname:port of an Elastic master node.  This is usually the same host as
+### the archivist.
 analyst.index.host=archivist:9401
 
+### Set to true if this analyst will be a data node.  Once an Analyst becomes
+### a data node it cannot be changed back to a non-data node.
+analyst.index.data=false
+
+### Make this analyst node an ElasticSearch master node.  This is sometimes desirable
+### if the Analyst is a data node.
+analyst.index.master=false
+
+### The path to the analyst directory structure.
 analyst.path.home=.
+
+### The path to the data files if the analyst is a data node.
 analyst.path.index=${analyst.path.home}/db/index
+
+### The path to the backup files if backups are enabled.  See enabling backups in the
+### server documentation for how to set this value.
 analyst.path.backups=/backups
 
-analyst.autoshutdown.idle-minutes=-1
-
-analyst.maintenance.backups.enabled = false
-
+### The TCP port used for cluster communication between the Archivist and Analyst.
 analyst.cluster.command.port = 8098
 
+### The HTTP port.
 server.port = 8099
-server.ssl.enabled = false
+
+## Maintenance options.
+
+### If backups are enabled in the Archivist, they must also be enabled in the Analyst.
+analyst.maintenance.backups.enabled = false
+
+### Setting to true in the AWS environment will properly configure the server for
+### AWS operation.
 server.aws.check-location = false
+
+## Executor Settings
+
+### Set to true if the analyst should execute tasks.  Setting this
+### to false and 'analyst.index.true' will make this a pure data node.
+analyst.executor.enabled = true
+
+### Number of threads to use for asset executors.
+### 0 for all CPUs, both physical and logical
+### -1 for 1/2 the number of available CPUS
+analyst.executor.threads = 0
+
+### Number of milliseconds between polling for new work from the archivist.
+analyst.executor.pollTimeMs = 1000
+
+### The number of minutes an Analyst will go without any work before automatically shutting down.
+### -1 to disable.
+analyst.executor.idleMinutesShutdown=-1
 
 
