--- a/archivist/src/test/resources/test.properties
+++ b/archivist/src/test/resources/test.properties
@@ -7,23 +7,23 @@ archivist.path.home=unittest
 #
 
 ### The SQL DB vendor.
-archivist.datasource.primary.vendor=postgresql
+#archivist.datasource.primary.vendor=postgresql
 
 ### The JDBC URL to the Archivist SQL database.
-archivist.datasource.primary.url=jdbc:postgresql://localhost/chambers?currentSchema=zorroa
+#archivist.datasource.primary.url=jdbc:postgresql://localhost/chambers?currentSchema=zorroa
 
 ### The driver for the Archivist SQL database.
-archivist.datasource.primary.driver-class-name=org.postgresql.Driver
+#archivist.datasource.primary.driver-class-name=org.postgresql.Driver
 
 ### The username for the Archivist SQL database.
-archivist.datasource.primary.username=chambers
+#archivist.datasource.primary.username=chambers
 
 ### The password for the Archivist SQL database.
-archivist.datasource.primary.password=
+#archivist.datasource.primary.password=
 
-flyway.schemas=zorroa
+#flyway.schemas=zorroa
 
-#archivist.datasource.primary.url=jdbc:h2:./unittest/archivist;DB_CLOSE_DELAY=-1;
+archivist.datasource.primary.url=jdbc:h2:./unittest/archivist;DB_CLOSE_DELAY=-1;
 
 #
 # Run the the web server and event server on different port.
@@ -42,6 +42,6 @@ archivist.lfs.paths=${archivist.path.home}/../../../zorroa-test-data
 spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
 spring.mail.username=smtp@zorroa.com
-spring.mail.password=3Ja84m*Du+86
+spring.mail.password=yaqoxjsmuyqvdxof
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
