--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -212,6 +212,13 @@
             <artifactId>hibernate-validator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test-junit</artifactId>
+            <version>${kotlin.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- web interface depends -->
         <dependency>
             <groupId>org.webjars</groupId>
