--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -39,6 +39,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.zorroa</groupId>
             <artifactId>sdk</artifactId>
         </dependency>
