--- a/zorroa-security/pom.xml
+++ b/zorroa-security/pom.xml
@@ -17,6 +17,11 @@
             <type>pom</type>
             <scope>import</scope>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.2.1.RELEASE</version>
+        </dependency>
+        </dependencies>
     </dependencyManagement>
 </project>
