server: moved admin stuff to /admin endpoint.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -61,11 +61,7 @@ archivist.index.migrateStatus = yellow
 ### The number of elastic shard replicas.
 archivist.index.replicas = 1
 
-### Allow access to the ES console. Setting this to true would be
-### required to use external tools to talk to elastic.
-archivist.index.console.open = false
-
-## Internal DB configuration.
+## Priamary DB configuration.
 
 ### The SQL DB vendor.
 archivist.datasource.primary.vendor=h2
@@ -81,9 +77,6 @@ archivist.datasource.primary.username=sa
 
 ### The password for the Archivist SQL database.
 archivist.datasource.primary.password=
-
-### Allow non-localhost clients to connect to DB console if available.
-archivist.datasource.primary.console.open = false
 
 ## Password Security Configuration
 
@@ -361,4 +354,13 @@ spring.jackson.default-property-inclusion=non_null
 ### Disable the overly verbose Catalina logging.
 logging.level.org.apache.catalina=OFF
 
+## Debug Configuration
 
+### Set to true to enable debugging consoles for ES and H2
+archivist.debug.mode = false
+
+### Enable the embedded h2 console
+spring.h2.console.enabled=${archivist.debug.mode}
+
+### Path to embedded H2 console
+spring.h2.console.path=/admin/console
