archivist: renamed archivist.debug.mode to archivist.debug-mode.enabled

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -357,10 +357,10 @@ logging.level.org.apache.catalina=OFF
 ## Debug Configuration
 
 ### Set to true to enable debugging consoles for ES and H2
-archivist.debug.mode = false
+archivist.debug-mode.enabled = false
 
 ### Enable the embedded h2 console
-spring.h2.console.enabled=${archivist.debug.mode}
+spring.h2.console.enabled=${archivist.debug-mode.enabled }
 
 ### Path to embedded H2 console
 spring.h2.console.path=/admin/console
