--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -362,5 +362,8 @@ archivist.debug-mode.enabled = false
 ### Enable the embedded h2 console
 spring.h2.console.enabled=${archivist.debug-mode.enabled}
 
+### Allow console access to remove clients
+spring.h2.console.settings.web-allow-others=false
+
 ### Path to embedded H2 console
 spring.h2.console.path=/admin/console
