archivist: adds rest-api.version to info endpoint.

--- a/archivist/src/main/resources/version.properties
+++ b/archivist/src/main/resources/version.properties
@@ -4,3 +4,4 @@ build.user=${user.name}
 build.id=${git.commit.id}
 build.dirty=${git.dirty}
 build.branch=${git.branch}
+rest-api.version=${rest-api.version}
