--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -18,6 +18,7 @@
     </parent>
 
     <properties>
+        <rest-api.version>1.0.0</rest-api.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <start-class>com.zorroa.archivist.Application</start-class>
         <java.version>1.8</java.version>
