archivist: shut down all actuator endpoints except health and info

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -333,8 +333,23 @@ management.security.enabled = false
 ### Disable health check for Elastic, Spring does not support 2.2 yet.
 management.health.elasticsearch.enabled=false
 
-### Set to false if health endpoint data is no sensitive.
-endpoints.health.sensitive = false
+### Disable all Spring Actuator endpoints by default
+endpoints.enabled=false
+
+### Enable the /info endpoint
+endpoints.info.enabled=true
+
+### Enable the /health endpoint
+endpoints.health.enabled=true
+
+### Make all endpoints sensitive by default
+endpoints.sensitive=true
+
+### Make /info endpoint non-sensitive
+endpoints.info.sensitive=false
+
+### Make /health endpoint non-sensitive
+endpoints.health.sensitive=false
 
 ## Database Migration Settings
 
