archivist: disable the CGLIB warning for now.

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -369,6 +369,9 @@ spring.jackson.default-property-inclusion=non_null
 ### Disable the overly verbose Catalina logging.
 logging.level.org.apache.catalina=OFF
 
+### Disable CGLIB warnings for kotin.
+logging.level.org.springframework.aop.framework.CglibAopProxy=OFF
+
 ## Debug Configuration
 
 ### Set to true to enable debugging consoles for ES and H2
