Partial commit of docker execution system.
Cluster communication had to be moved into its own project so a ZpsRun cool could be build that
could talk back to archivist from within docker.

--- a/analyst/src/main/resources/application.properties
+++ b/analyst/src/main/resources/application.properties
@@ -45,6 +45,12 @@ server.aws.check-location = false
 
 ## Executor Settings
 
+### Use docker to wrap the execution process
+analyst.executor.docker.enabled = false
+
+###  The default docker image to use if one is not specified with the task.
+analyst.executor.docker.default-image = zorroa_runenv
+
 ### Set to true if the analyst should execute tasks.  Setting this
 ### to false and 'analyst.index.true' will make this a pure data node.
 analyst.executor.enabled = true
