--- a/analyst/pom.xml
+++ b/analyst/pom.xml
@@ -89,6 +89,11 @@
 
         <dependency>
             <groupId>com.zorroa</groupId>
+            <artifactId>cluster</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zorroa</groupId>
             <artifactId>sdk</artifactId>
         </dependency>
 
@@ -98,13 +103,14 @@
         </dependency>
 
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
+            <groupId>com.spotify</groupId>
+            <artifactId>docker-client</artifactId>
+            <version>8.9.2</version>
         </dependency>
 
         <!-- TEST -->
