--- a/archivist/pom.xml
+++ b/archivist/pom.xml
@@ -57,6 +57,11 @@
 
         <dependency>
             <groupId>com.zorroa</groupId>
+            <artifactId>cluster</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zorroa</groupId>
             <artifactId>zorroa-security</artifactId>
             <version>1.0.0</version>
         </dependency>
@@ -253,11 +258,6 @@
             <version>3.1.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>d3js</artifactId>
-            <version>4.2.1</version>
-        </dependency>
     </dependencies>
 
     <build>
