--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -130,7 +130,7 @@ archivist.search.keywords.auto.enabled = true
 ### If keywords.auto.enabled is true, dynamically add fields with this name to a query search.
 archivist.search.keywords.auto.fields = keywords.all,keywords,filename,content,title,caption
 
-### A JSON Map<String,Float> of hard coded keywords fields, eg {"foo": 1.0}
+### A JSON Map<String,Float> of hard coded keywords fields,foo:1.0,bar:2.0
 archivist.search.keywords.static.fields =
 
 ### The default sort fields in the format of field:direction,field:direction.
