all: bumped kotlin

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <java.version>1.8</java.version>
         <zorroa-server.version>0.39.0</zorroa-server.version>
         <spring-boot.version>1.5.9.RELEASE</spring-boot.version>
+        <kotlin.version>1.2.21</kotlin.version>
     </properties>
 
     <modules>
@@ -28,6 +29,26 @@
 
     <dependencyManagement>
         <dependencies>
+
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-stdlib-jdk8</artifactId>
+                <version>${kotlin.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-reflect</artifactId>
+                <version>${kotlin.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-test-junit</artifactId>
+                <version>${kotlin.version}</version>
+                <scope>test</scope>
+            </dependency>
+
             <dependency>
                 <groupId>org.codehaus.groovy</groupId>
                 <artifactId>groovy-all</artifactId>
