archivist: made the origin.createdTime the default sort

--- a/archivist/src/main/resources/application.properties
+++ b/archivist/src/main/resources/application.properties
@@ -135,7 +135,7 @@ archivist.search.keywords.static.fields =
 
 ### The default sort fields in the format of field:direction,field:direction.
 ### Score is always first.
-archivist.search.sortFields = _timestamp:DESC
+archivist.search.sortFields = origin.timeCreated:DESC
 
 ## Local file system settings.
 
